# car-hmi-with-cursor

./: CMakeLists.txt  README.md  create_demo.sh  update_readme_with_media.sh
app/: main.cpp
assets/models/porshe-taycan/source/: Porshe_taycan_tscetchab.qml
assets/models/porshe-taycan/source/meshes/: _pCylinder584_mesh.mesh  _pCylinder585_mesh.mesh  _polySurface86_mesh.mesh  group27_polySurface1119_mesh.mesh  pCube10_mesh.mesh  pCube14_mesh.mesh  pCube16_mesh.mesh  pCube19_mesh.mesh  pCube21_mesh.mesh  pCube22_mesh.mesh  pCube24_mesh.mesh  pCube25_mesh.mesh  pCube26_mesh.mesh  pCube27_mesh.mesh  pCube2_mesh.mesh  pCube30_mesh.mesh  pCube31_mesh.mesh  pCube33_mesh.mesh  pCube34_mesh.mesh  pCube36_mesh.mesh  pCube37_mesh.mesh  pCube4_Done14_mesh.mesh  pPlane13_mesh.mesh  pPlane23_mesh.mesh  pPlane25_mesh.mesh  pPlane27_mesh.mesh  pPlane32_mesh.mesh  pPlane47_mesh.mesh  pPlane49_mesh.mesh  pPlane50_mesh.mesh  pSphere1_mesh.mesh  pSphere3_mesh.mesh  polySurface1002_mesh.mesh  polySurface1003_mesh.mesh  polySurface1004_mesh.mesh  polySurface1005_mesh.mesh  polySurface1006_mesh.mesh  polySurface1011_mesh.mesh  polySurface1012_mesh.mesh  polySurface1013_mesh.mesh  (+64 more)
assets/models/porshe_taycan/: license.txt  scene.gltf
docs/: CREATE_DEMO.md
signals/: MockCan.cpp  MockCan.h
ui/: Main.qml
ui/components/: InteractiveCar.qml  LuxuryCar3D.qml  Porsche3DView.qml  SpeedCluster.qml
